--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Deathrow's Art Site</title>
+  <title>TEST WEBSITE </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -86,22 +86,19 @@
   <header>
     <h1>Deathrow's art!</h1>
     <p class="subtitle">
-      Heya, I'm <strong>Felix</strong> and I art. I take requests because I don’t know how to start commissions yet. These requests are entirely <strong>FREE!</strong> Just DM me on Discord (<strong>m4lw4r3ee</strong>) — I’ll usually reply quickly unless I’m on DND. I’ll try to draw <strong>anything and everything</strong> — though I mostly draw <strong>Miis</strong>.
-    </p>
-  </header>
+      THIS IS A <strong>TEST WEBSITE</strong>
 
   <section>
     <h2>Connections</h2>
     <div class="links">
-      <a href="https://x.com/40444444abc?s=21" target="_blank">Twitter/X</a>
       |
-      <a href="https://www.tumblr.com/almondsad12" target="_blank">Tumblr</a>
+
     </div>
-    <img src="https://i.imgur.com/IczGB7i.jpeg" alt="Art preview">
+    <img src="https://imgur.com/a/r2mo4it" alt="Art preview">
   </section>
 
   <footer>
-    &copy; 2025 Felix / Deathrow's Art Site
+    &copy; 2025 / test site
   </footer>
 </body>
 </html>
