--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       |
 
     </div>
-    <img src="https://imgur.com/a/r2mo4it" alt="Art preview">
+    <img src="https://i.imgur.com/fCi0ORY.png" alt="Art preview">
   </section>
 
   <footer>
