--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       background: linear-gradient(145deg, #1e0033, #2e004f); 
-      color: #ffffff;
+      color: #ff0000;
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
@@ -34,7 +34,7 @@
     }
 
     .subtitle strong {
-      color: #ffffff;
+      color: #ff0000;
     }
 
     section {
@@ -51,7 +51,7 @@
     }
 
     .links a {
-      color: #00ddff;
+      color: #ff4000;
       text-decoration: none;
       margin: 0 10px;
       font-weight: 600;
@@ -84,7 +84,7 @@
 </head>
 <body>
   <header>
-    <h1>Deathrow's art!</h1>
+    <h1>test website title</h1>
     <p class="subtitle">
       THIS IS A <strong>TEST WEBSITE</strong>
 
@@ -94,7 +94,7 @@
       |
 
     </div>
-    <img src="https://i.imgur.com/fCi0ORY.png" alt="Art preview">
+    <img src="https://i.imgur.com/fCi0ORY.png" alt="image preview">
   </section>
 
   <footer>
