--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       THIS IS A <strong>TEST WEBSITE</strong>
 
   <section>
-    <h2>Connections</h2>
+    <h2>TEST WEBSITE IMAGE BELOW </h2>
     <div class="links">
       |
 
