--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     footer {
       text-align: center;
       font-size: 0.9rem;
-      color: #cccccc;
+      color: #ff0022;
       padding: 40px 20px 20px;
     }
   </style>
