--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(145deg, #ff0999, #2e004f); 
+      background: linear-gradient(145deg, #ff0999,); 
       color: #ff0000;
       font-family: 'Inter', sans-serif;
       margin: 0;
