--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TEST WEBSITE </title>
+  <title>Test Website</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(145deg, #ff0999, #ff0999,); 
+      background: linear-gradient(145deg, #ff0999, #ff0999);
       color: #ff0000;
       font-family: 'Inter', sans-serif;
       margin: 0;
@@ -84,21 +84,22 @@
 </head>
 <body>
   <header>
-    <h1>test website title</h1>
+    <h1>Test Website Title</h1>
     <p class="subtitle">
       THIS IS A <strong>TEST WEBSITE</strong>
+    </p>
+  </header>
 
   <section>
-    <h2>TEST WEBSITE IMAGE BELOW </h2>
+    <h2>Test Website Image Below</h2>
     <div class="links">
-      |
-
+      <a href="#">Home</a> | <a href="#">About</a>
     </div>
-    <img src="https://i.imgur.com/fCi0ORY.png" alt="image preview">
+    <img src="https://i.imgur.com/fCi0ORY.png" alt="Test illustration">
   </section>
 
   <footer>
-    &copy; 2025 / test site
+    &copy; 2025 / Test Site
   </footer>
 </body>
 </html>
